# chat-backend

./: client.py  pyproject.toml
app/: config.py  database.py  database_seeder.py  main.py  migrate_worlds.py  migrate_zones.py
app/ai/: agent_manager.py  schemas.py
app/api/: auth.py  dependencies.py  premium.py  schemas.py
app/models/: agent.py  character.py  conversation.py  entity.py  enums.py  game_event.py  message.py  mixins.py  object.py  player.py  subscription.py  usage.py  user.py  world.py  zone.py
app/schemas/: __init__.py  agents.py  auth.py  base.py  characters.py  conversations.py  entities.py  events.py  messages.py  objects.py  players.py  subscriptions.py  usage.py  worlds.py  zones.py
app/services/: agent_service.py  auth_service.py  character_service.py  conversation_service.py  entity_service.py  event_service.py  message_service.py  object_service.py  payment_service.py  player_service.py  usage_service.py  user_service.py  world_service.py  zone_service.py
app/websockets/: connection_manager.py  event_dispatcher.py
client/: main.py
client/api/: base_service.py  character_service.py  conversation_service.py  entity_service.py  event_service.py  message_service.py  object_service.py  payment_service.py  world_service.py  zone_service.py
client/auth/: auth_service.py  auth_view.py
client/game/: chat.py  client.py  state.py
client/ui/: character_menu.py  chat_view.py  console.py  world_menu.py  zone_menu.py
client/utils/: config.py  helpers.py
client2/: api.py  auth.py  chat.py  config.py  main.py  state.py  ui.py
(+15 files in other folders)
